Bug 63311 - EDITING: value of the property "String" is not set to "" for completely deleted text in Shapes (reappears after 'save - close - reopen')
Summary: EDITING: value of the property "String" is not set to "" for completely delet...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.3.7.2 release
Hardware: All All
: highest major
Assignee: Muthu
URL:
Whiteboard: BSA target:4.1.0 target:4.0.4
Keywords: regression
: 62679 62687 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-04-09 12:49 UTC by Mao
Modified: 2022-12-26 18:53 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple Sample Document (8.50 KB, application/vnd.oasis.opendocument.graphics)
2013-04-09 17:06 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mao 2013-04-09 12:49:48 UTC
Problem description: 
text cannot be erased in shapes.

Steps to reproduce:
1. .... Draw a rectangle
2. .... Add text (ex."A") in it
3. .... Save to a file
4. .... Close application
5. .... Open the file
6. .... Erase the text in the rectangle
7. .... Save to a file
8. .... Close application
5. .... Open the file again


Current behavior:
The erased text revives always.

Expected behavior:
It should be erased.
              
Operating System: Windows 7
Version: 4.0.2.2 release
Comment 1 Jacques Guilleron 2013-04-09 15:48:10 UTC
Hello Mao,

I reproduce with LO 4.0.2.2, LOdev 4.0.3.0+ (Build ID: 64a3b58a9ace11c6a01708e8de14712e27e0204), Windows 7 Home Premium.
I don't reproduce with LO 3.6.4.3 Portable  (Build ID: 2ef5aff).

Thank you for the report,

Have a nice day,

Jacques Guilleron
Comment 2 Joel Madero 2013-04-09 15:49:29 UTC
Thank you for reporting this issue! I have been able to confirm the issue on:
Version: 4.1.0.0.alpha0+Build ID: 07c9bb103823dd9c0dc297d0315907ab94488f9
Date:   Sun Apr 7 02:03:35 2013 +0300 
Platform: Bodhi Linux 2.2 x64

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
As I've been able to confirm this problem I am marking as:

New (confirmed)
Major - loss of data (loss of delete = loss of data)
Highest - quite annoying, regression, MAB, basic functionality of component

Keywords - regression

Whiteboard Status - bibisectrequest

+ + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + + +
LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link:
https://wiki.documentfoundation.org/QA/BugTriage and join us on freenode at #libreoffice-qa

There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists/. 

Lastly, good bug reports help tremendously in making the process go smoother, please always provide reproducible steps (even if it seems easy) and attach any and all relevant material
Comment 3 Joel Madero 2013-04-09 16:07:31 UTC
Unfortunately this is outside of bibisect range. Removed bibisectrequest
Comment 4 Regina Henschel 2013-04-09 16:35:38 UTC
The error is not in the classical rectangle but in all custom shapes.
I see the error in Version 4.0.1.2 (Build ID: 84102822e3d61eb989ddd325abf1ac077904985)
Comment 5 Rainer Bielefeld Retired 2013-04-09 17:06:05 UTC
Created attachment 77681 [details]
Simple Sample Document

I saw this one popping up in MAB. Really ugly, may be I can help a little with some pseudo-bibisecting.

Reproducible with attached sample document and server installation of "LibO  4.0.2.2 rc   -  German UI / German Locale  [Build ID: 4c82dcdd6efcd48b1d8bba66bfe1989deee49c3)]"  {tinderbox: @6, pull time  2013-03-26 12:00(?)} on German WIN7 Home Premium (64bit) with newly created own user profile.

Result of tests with various versions:

Already  [Reproducible] with with server  installation of  "LOdev  4.0.0.0.beta2+   -  ENGLISH UI / German Locale  [Build ID: 6738ae52bd075dc6478dedfeddc60d1c25cffcb)]"  {tinderbox: Win-x86@6, pull time 2013-01-04 23:41:48} on German WIN7 Home Premium (64bit) with own separate User Profile

Still worked fine  with 
* server  installation of  "LOdev  4.0.0.0.beta1+   -  ENGLISH UI / German Locale  [Build ID: 6d4a55bf38a1c470c49f904dbbddf94eb2f6154)]"  {tinderbox: Win-x86@6, pull time 2012-12-17 08:36:40} on German WIN7 Home Premium (64bit) with own separate User Profile 

Still [Reproducible] with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 049ce78144650d92eb6bd73292868f73d37c901) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-03-29_23:59:42" ENGLISH UI / German Locale on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile
Comment 6 Regina Henschel 2013-04-09 17:11:22 UTC
Already there in Version 4.0.0.3 (Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)
Comment 7 Rainer Bielefeld Retired 2013-04-09 17:15:25 UTC
Partial text deletions seem to work fine (I did not do many tests).
I did not find a dependency on settings (Quick Text Edit, Experimental features, ...)

Strange, I did not see Regina's observation "Works in classic rectangles", did I do a mistake?
Comment 8 Regina Henschel 2013-04-09 17:18:05 UTC
"Classical Rectangle" has the text "Rectangle" in the status bar, the others have the text "Shape".
Comment 9 Joel Madero 2013-04-09 17:28:01 UTC
interesting that you are seeing it with 4.0.0.3, that should show up in bibisect but for me it doesn't :-/
Comment 10 Rainer Bielefeld Retired 2013-04-09 17:29:30 UTC
Yes, I made a mistake, my toolbar contains Rectangle _shape_ where I expected classic Rectangle - I should have seen the different color of control points :-(
So please forget my nonsense concerning Classic Rectangle in comments before.

@Regina (In reply to comment #8)
The toolitp is "Rectangle" for both, just can't find where I can switch from icons to texts
Comment 11 Regina Henschel 2013-04-09 18:05:48 UTC
I do not mean the tooltip but the text that appears at the left side in the status bar, when the object is selected.
Comment 12 Regina Henschel 2013-04-09 18:17:51 UTC
It is OK in Version 4.0.0.0.beta2 (Build ID: 4104d660979c57e1160b5135634f732918460a0)

I see the commits
fdo#56267, fdo#56980 propagate shape change to subclasses
id=7fec8dfcaca4efc92516f9af51a3157f1a11ccd7
and
fdo#56980, fdo#58267 don't leave stale SdrObject refs around
id=31b93b8600a3e219d33173aa68d9ab570e477e50
which deal with custom shapes. Has someone a build, that is shortly after that commits to test it?
Comment 13 Rainer Bielefeld Retired 2013-04-09 19:11:55 UTC
Modified picker to closest currently known version.

I have 3 Win Master Builds between 2012-12-17 and 2013-01-04, don't know whether that might help
Comment 14 Regina Henschel 2013-04-09 21:09:33 UTC
@Rainer: Please try which is the next build of yours after 2012-12-17 (which was OK) which shows the error. Then it will be possible to say, whether the mentioned commits might be the reason, or whether they are blameless.

The problem is not in save or load. I have watched the shape with a macro and can see there, that the value of the property "String" is not set to "" as it should be in case of completely deleting, but it keeps its old value.
Comment 15 Rainer Bielefeld Retired 2013-04-10 04:36:57 UTC
I installed some additional versions and was able to narrow down the appearance of the bug:

Already reproducible with Version 4.1.0.0.alpha0+ (Build ID: e90807267808eb062b93d762c50c02113ca40db)
TinderBox: Win-x86@6, Branch:master, Time: 2012-12-26_22:00:49 (WIN7 64 bit)

Still worked fine 2012-12-17 (Comment 5)

Modified Summary due to Comment 14

@Regine (In reply to comment #14): I think very often in similar bugs the close-open is not the cause for the problem, but the way how bug becomes visible during normal use.
Comment 16 Rainer Bielefeld Retired 2013-04-16 15:29:40 UTC
Something went wrong here, this one has nothing to do with Bug 63585
Comment 17 Michael Meeks 2013-05-07 13:51:26 UTC
*** Bug 62687 has been marked as a duplicate of this bug. ***
Comment 18 Michael Meeks 2013-05-07 13:51:53 UTC
*** Bug 62679 has been marked as a duplicate of this bug. ***
Comment 19 Michael Meeks 2013-05-07 13:54:43 UTC
Christina kindly bisected this down to an individual commit:

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1d16f59023b1b19d01ca69b8c9735be6d3baf5d9

Which was multiply fixed up afterwards - dtardon last nailed a nasty in that area ... :-) thoughts ?
Comment 20 Michael Meeks 2013-05-08 15:06:46 UTC
Muthu came up with a prototype patch on the list here:

http://lists.freedesktop.org/archives/libreoffice/2013-May/051755.html
Comment 21 Muthu 2013-05-09 11:01:19 UTC
Pushing the fix for testing, while I dig to see if there is any other better way.
Comment 22 Muthu 2013-05-09 11:08:40 UTC
@Michael: The commit id seems to refer to caching of the shapes - are you sure the id is correct, please?
Comment 23 Commit Notification 2013-05-09 11:10:33 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=19b217505d094577392d8712b9d07f29b3de2081

fdo#63311: Unable to delete text from Shape.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 24 Michael Meeks 2013-05-24 13:48:22 UTC
David any chance of a quick review & merge to -4-0 so we can get this MAB closed ? :-) Thanks !
Comment 25 Commit Notification 2013-05-24 16:18:27 UTC
Muthu Subramanian committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84093cceb624eab7d956caebdaaf2ac10397900b&h=libreoffice-4-0

fdo#63311: Unable to delete text from Shape.


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 Ferdinand Noelscher 2013-06-08 11:45:04 UTC
Verified fixed on build 1e07c17
Comment 27 Laurent Pointal 2022-12-25 09:57:54 UTC
Hello, the bug is (still/back) present in LibreOffice Draw 7.3.7.2 (Linux, Ubuntu 22.04.1 package).

Note: I used whitespace texts to "dismiss" text information of my shapes as a workaround.
Comment 28 Regina Henschel 2022-12-25 13:39:55 UTC
(In reply to Laurent Pointal from comment #27)
> Hello, the bug is (still/back) present in LibreOffice Draw 7.3.7.2 (Linux,
> Ubuntu 22.04.1 package).
> 
> Note: I used whitespace texts to "dismiss" text information of my shapes as
> a workaround.

This bug 63311 is verified fixed. And I have tested again that it is really fixed in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9b46020c262045aed0beace4708565235c2523cc
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded


Therefore your problem has a different cause. Please write a new bug report for your problem. Please give an exact step-by-step description to reproduce the problem.
Comment 29 Laurent Pointal 2022-12-26 16:45:39 UTC
Hello,

I tested with LibreOffice Draw 7.4.3.2 (from Ubuntu snap). Same result.

The only difference from step by step description from original post is that I use a circle (oval) shape in place of a rectangular shape.

I see you tested on Windows platform. Could this bug be related to an external lib with differences between Windows and Linux ?
Comment 30 Regina Henschel 2022-12-26 18:53:59 UTC
(In reply to Laurent Pointal from comment #29)
> Hello,
> 
> I tested with LibreOffice Draw 7.4.3.2 (from Ubuntu snap). Same result.
> 
> The only difference from step by step description from original post is that
> I use a circle (oval) shape in place of a rectangular shape.
> 
> I see you tested on Windows platform. Could this bug be related to an
> external lib with differences between Windows and Linux ?

There might be a problem that only occurs on Linux. It might even be, that the package from Ubuntu has this problem and the original package from TDF is OK. But again, this issue is not the right place to discuss it. Please write a new bug report.