fdo#63311: Unable to delete text from Shape.

This avoids setting null as text to the shape.
[empty_text seems to be the initial value of text for shape
 rather than null - something recent? We also seem to
 export empty <text> entries because of this]
(cherry picked from commit 19b217505d094577392d8712b9d07f29b3de2081)

Signed-off-by: David Tardon <dtardon@redhat.com>